--- a/07_dom-basics-1/task_3.html
+++ b/07_dom-basics-1/task_3.html
@@ -1,39 +1,12 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script defer src="./task_3.js"></script>
   </head>
-
   <body>
 
-    <script>src = "task_3.js"</script>
-
-    <ul>
-      <li>
-          <h2>Валя</h2>
-          <span>Возраст: 11 лет</span>
-      </li>
-      <li>
-          <h2>Таня</h2>
-          <span>Возраст: 24 лет</span>
-      </li>
-      <li>
-          <h2>Рома</h2>
-          <span>Возраст: 21 лет</span>
-      </li>
-      <li>
-          <h2>Надя</h2>
-          <span>Возраст: 34 лет</span>
-      </li>
-      <li>
-          <h2>Антон</h2>
-          <span>Возраст: 7 лет</span>
-      </li>
-    </ul>
-
   </body>
-
 </html>
