--- a/09_const-var-scope/index.html
+++ b/09_const-var-scope/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Игра в пары</title>
-
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script defer src="main.js"></script>
 </head>
 
 <body>
-
+    <section class="main">
+        <h1 class="title">Игра в пары</h1>
+        <div class="container" id="container">
+            <div class="game" id="game"></div>
+            <button class="btn-reset btn" id="button">Сыграть ещё раз!</button>
+        </div>
+    </section>
 </body>
 
 </html>
