--- a/10_type-transform/index.html
+++ b/10_type-transform/index.html
@@ -6,8 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Список студентов</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous">
 
-    <script defer type="module" src="main.js"></script>
+    <script defer src="main.js"></script>
 </head>
 
 <body>
@@ -101,7 +106,6 @@
     </tbody>
   </table>
 
-  <script defer type="module" src="index.html"></script>
 </body>
 
 </html>
