--- a/10_type-transform/index.html
+++ b/10_type-transform/index.html
@@ -1,111 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Список студентов</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous">
-
-    <script defer src="main.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Список студентов</title>
+  <link 
+    rel="stylesheet" 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
+    crossorigin="anonymous">
 </head>
 
 <body>
-  <h1>Список студентов</h1>
-  <div class="forms">
-    <!-- HTML код формы для добавления студента -->
-    <form id="add-student-form" method="post">
-      <label class="add-form__cell">Фамилия:
-        <input type="text" id="surname" required>
-      </label>
-      <label class="add-form__cell">Имя:
-        <input type="text" id="name" required>
-      </label>
-      <label class="add-form__cell">Отчество:
-        <input type="text" id="lastname" required>
-      </label>
-      <label class="add-form__cell">Дата рождения:
-        <input type="text" id="birthday" min="1900-01-01" required>
-      </label>
-      <label class="add-form__cell">Год начало обучения:
-        <input type="text" id="startEducation" min="2000" required>
-      </label>
-      <label class="add-form__cell">Факультет:
-        <input type="text" id="faculty" required>
-      </label>
-    <button type="submit">Добавить студента</button>
-    </form>
-    <!-- HTML код формы для поиска студентов -->
-    <form id="filter-form">
-      <h2>Для быстрого поиска воспользуйтесь фильтром:</h2>
-      <label class="filter-form__line">По Ф.И.О.:
-        <input type="text" id="name-filter">
-      </label>
-      <label class="filter-form__line">По факультету:
-        <input type="text" id="faculter-filter">
-      </label>
-      <label class="filter-form__line">По году поступления:
-        <input type="text" id="start-educ-filter">
-      </label>
-      <label class="filter-form__line">По году окончанию:
-        <input type="text" id="finish-educ-filter">
-      </label>
+  <section class="main">
+    <div class="container">
+      <h1>Список студентов</h1>
+      <h2>Добавление нового сотрудника</h2>
 
-      <div class="filter-form__button">
-        <button id="filtres" type="submit">Применить фильтры</button>
-        <button id="reset-filter" type="reset">Сбросить фильтры</button>
-      </div>
-    </form>
-  </div>
-  <!-- HTML код таблицы со списком студентов -->
-  <table class="table">
-    <thead>
-      <tr>
-        <th id="name-header">Ф.И.О. студента</th>
-        <th id="birthday-header">Дата рождения</th>
-        <th id="start__education-header">Год начала обучения</th>
-        <th id="faculty-header">Факультет</th>
-      </tr>
-    </thead>
-    <tbody id="students-list">
-      <tr>
-        <td>Фролов Игорь Сергеевич</td>
-        <td>1997.02.21</td>
-        <td>2020</td>
-        <td>Физика</td>
-      </tr>
-      <tr>
-        <td>Шевченко Алена Ивановна</td>
-        <td>2000.03.21</td>
-        <td>2019</td>
-        <td>Химия</td>
-      </tr>
-      <tr>
-        <td>Чапаксин Иван Владимирович</td>
-        <td>1999.09.09</td>
-        <td>2021</td>
-        <td>Химия</td>
-      </tr>
-      <tr>
-        <td>Миллер Ира Максимовна</td>
-        <td>2002.09.09</td>
-        <td>2022</td>
-        <td>Биология</td>
-      </tr>
-      <tr>
-        <td>Данилова Мария Сергеевна</td>
-        <td>1998.09.12</td>
-        <td>2020</td>
-        <td>Математика</td>
-      </tr>
-    </tbody>
-  </table>
+      <form action="" id="add-student" class="mb-3">
+        <div class="mb-3">
+          <input class="form-control" type="text" placeholder="Фамилия" id="input-surename">
+        </div>
+        <div class="mb-3">
+          <input class="form-control" type="text" placeholder="Имя" id="input-name">
+        </div>
+        <div class="mb-3">
+          <input class="form-control" type="text" placeholder="Отчество" id="input-lastname">
+        </div>
+        <div class="mb-3">
+          <input class="form-control" type="date" id="input-birthData">
+        </div>
+        <div class="mb-3">
+          <input class="form-control" type="number" placeholder="Начало обучения" id="input-startYear">
+        </div>
+        <div class="mb-3">
+          <input class="form-control" type="text" placeholder="Факультет" id="input-faculty">
+        </div>
+        <button class="btn btn-primary">Добавить</button>
+      </form>
 
+      <table class="table table-striped studentsTable">
+        <thead>
+          <th data-column="fio">ФИО</th>
+          <th data-column="birthData">Дата рождения</th>
+          <th data-column="startYear">Начало обучения</th>
+          <th data-column="faculty">Факультет</th>
+        </thead>
+        
+        <tbody id="students-list">
+        </tbody>
+      </table>
+    </div>
+  </section>
+
+  <script defer src="main.js"></script>
 </body>
 
 </html>
