--- a/10_type-transform/index.html
+++ b/10_type-transform/index.html
@@ -3,57 +3,49 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Список студентов</title>
-  <link 
-    rel="stylesheet" 
-    href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
     crossorigin="anonymous">
 </head>
 
 <body>
-  <section class="main">
-    <div class="container">
-      <h1>Список студентов</h1>
-      <h2>Добавление нового сотрудника</h2>
+  <div class="container">
+    <h1>Список студентов</h1>
 
-      <form action="" id="add-student" class="mb-3">
-        <div class="mb-3">
-          <input class="form-control" type="text" placeholder="Фамилия" id="input-surename">
-        </div>
-        <div class="mb-3">
-          <input class="form-control" type="text" placeholder="Имя" id="input-name">
-        </div>
-        <div class="mb-3">
-          <input class="form-control" type="text" placeholder="Отчество" id="input-lastname">
-        </div>
-        <div class="mb-3">
-          <input class="form-control" type="date" id="input-birthData">
-        </div>
-        <div class="mb-3">
-          <input class="form-control" type="number" placeholder="Начало обучения" id="input-startYear">
-        </div>
-        <div class="mb-3">
-          <input class="form-control" type="text" placeholder="Факультет" id="input-faculty">
-        </div>
-        <button class="btn btn-primary">Добавить</button>
-      </form>
+    <form action="#" id="add-form" class="mb-3">
+      <h2>Добавить пользователя</h2>
+      <input id="add-form__name-inp" class="form-control mb-3" type="text" placeholder="Имя">
+      <input id="add-form__surename-inp" class="form-control mb-3" type="text" placeholder="Отчество">
+      <input id="add-form__lastname-inp" class="form-control mb-3" type="text" placeholder="Фамилия">
+      <input id="add-form__age-inp" class="form-control mb-3" type="number" placeholder="Возраст">
+      <input id="add-form__education-inp" class="form-control mb-3" type="date" placeholder="Год обучения">
+      <input id="add-form__faculty-inp" class="form-control mb-3" type="text" placeholder="Факультет">
 
-      <table class="table table-striped studentsTable">
-        <thead>
-          <th data-column="fio">ФИО</th>
-          <th data-column="birthData">Дата рождения</th>
-          <th data-column="startYear">Начало обучения</th>
-          <th data-column="faculty">Факультет</th>
-        </thead>
-        
-        <tbody id="students-list">
-        </tbody>
-      </table>
+      <button type="submit" class="btn btn-primary">Добавить поьзователя</button>
+    </form>
+
+    <div class="mb-3">
+      <button id="sort__fio" class="btn btn-primary">Сортировка по ФИО</button>
+      <button id="sort__age" class="btn btn-primary">Сортировка по возрасту</button>
     </div>
-  </section>
 
+    <form action="#" id="filter-form" class="mb-3">
+      <h2>Фильтрация</h2>
+      <input id="filter-form__fio-inp" class="form-control mb-3" type="text" placeholder="ФИО">
+      <input id="filter-form__faculty-inp" class="form-control mb-3" type="text" placeholder="Факультет">
+    </form>
+
+    <div id="app">
+
+    </div>
+  </div>
   <script defer src="main.js"></script>
 </body>
 
