--- a/10_type-transform/index.html
+++ b/10_type-transform/index.html
@@ -28,7 +28,7 @@
       <input id="add-form__education-inp" class="form-control mb-3" type="date" placeholder="Год обучения">
       <input id="add-form__faculty-inp" class="form-control mb-3" type="text" placeholder="Факультет">
 
-      <button type="submit" class="btn btn-primary">Добавить поьзователя</button>
+      <button type="submit" class="btn btn-primary">Добавить пользователя</button>
     </form>
 
     <div class="mb-3">
