--- a/10_type-transform/index.html
+++ b/10_type-transform/index.html
@@ -24,7 +24,7 @@
       <input id="add-form__name-inp" class="form-control mb-3" type="text" placeholder="Имя">
       <input id="add-form__lastname-inp" class="form-control mb-3" type="text" placeholder="Отчество">
       <input id="add-form__surname-inp" class="form-control mb-3" type="text" placeholder="Фамилия">
-      <input id="add-form__studyStart-inp" class="form-control mb-3" type="number" placeholder="Год обучения">
+      <input id="add-form__studyStart-inp" class="form-control mb-3" type="number" placeholder="Год начала обучения">
       <input id="add-form__birthday-inp" class="form-control mb-3" type="date" placeholder="Дата рождения">
       <input id="add-form__faculty-inp" class="form-control mb-3" type="text" placeholder="Факультет">
 
@@ -33,7 +33,7 @@
 
     <div class="mb-3">
       <button id="sort__fio" class="btn btn-primary">Сортировка по ФИО</button>
-      <button id="sort__studyStart" class="btn btn-primary">Сортировка по возрасту</button>
+      <button id="sort__birthday" class="btn btn-primary">Сортировка по возрасту</button>
     </div>
 
     <form action="#" id="filter-form" class="mb-3">
