--- a/10_type-transform/index.html
+++ b/10_type-transform/index.html
@@ -21,12 +21,25 @@
 
     <form action="#" id="add-form" class="mb-3">
       <h2>Добавить пользователя</h2>
-      <input id="add-form__name-inp" class="form-control mb-3" type="text" placeholder="Имя">
-      <input id="add-form__lastname-inp" class="form-control mb-3" type="text" placeholder="Отчество">
-      <input id="add-form__surname-inp" class="form-control mb-3" type="text" placeholder="Фамилия">
-      <input id="add-form__studyStart-inp" class="form-control mb-3" type="number" placeholder="Год начала обучения">
-      <input id="add-form__birthday-inp" class="form-control mb-3" type="date" placeholder="Дата рождения">
-      <input id="add-form__faculty-inp" class="form-control mb-3" type="text" placeholder="Факультет">
+
+      <div class="input-box">
+        <input id="add-form__name-inp" class="form-control mb-3" type="text" placeholder="Имя">
+      </div>
+      <div class="input-box">
+        <input id="add-form__lastname-inp" class="form-control mb-3" type="text" placeholder="Отчество">
+      </div>
+      <div class="input-box">
+        <input id="add-form__surname-inp" class="form-control mb-3" type="text" placeholder="Фамилия">
+      </div>
+      <div class="input-box">
+        <input id="add-form__studyStart-inp" class="form-control mb-3" type="number" placeholder="Год начала обучения">
+      </div>
+      <div class="input-box">
+        <input id="add-form__birthday-inp" class="form-control mb-3" type="date" placeholder="Дата рождения">
+      </div>
+      <div class="input-box">
+        <input id="add-form__faculty-inp" class="form-control mb-3" type="text" placeholder="Факультет">
+      </div>
 
       <button type="submit" class="btn btn-primary">Добавить пользователя</button>
     </form>
@@ -34,17 +47,20 @@
     <div class="mb-3">
       <button id="sort__fio" class="btn btn-primary">Сортировка по ФИО</button>
       <button id="sort__birthday" class="btn btn-primary">Сортировка по возрасту</button>
+      <button id="sort__faculty" class="btn btn-primary">Факультет</button>
+      <button id="sort__studyStart" class="btn btn-primary">Год начала обучения</button>
     </div>
 
     <form action="#" id="filter-form" class="mb-3">
       <h2>Фильтрация</h2>
       <input id="filter-form__fio-inp" class="form-control mb-3" type="text" placeholder="ФИО">
       <input id="filter-form__faculty-inp" class="form-control mb-3" type="text" placeholder="Факультет">
+      <input id="filter-form__studyStart-inp" class="form-control mb-3" type="text" placeholder="Год начала обучения">
+      <input id="filter-form__finalStart-inp" class="form-control mb-3" type="text" placeholder="Год окончания обучения">
     </form>
 
-    <div id="app">
+    <div id="app"></div>
 
-    </div>
   </div>
   <script defer src="main.js"></script>
 </body>
