--- a/11_client-server/11_client-server/index.html
+++ b/11_client-server/11_client-server/index.html
@@ -8,7 +8,7 @@
   <title>Список студентов</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-  <script defer src="js/main.js"></script>
+  <script defer src="main.js"></script>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
