--- a/11_client-server/11_client-server/index.html
+++ b/11_client-server/11_client-server/index.html
@@ -42,7 +42,7 @@
         <input id="add-form__faculty-inp" class="form-control mb-3" type="text" placeholder="Факультет">
       </div>
 
-      <button type="submit" class="btn btn-primary">Добавить пользователя</button>
+      <button type="submit" class="btn btn-primary" id="createButton">Добавить пользователя</button>
     </form>
 
     <div class="mb-3">
